--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -7,3 +7,9 @@ sites:
     expectStatus: 200
     followRedirects: true
     maxResponseTime: 360000
+  - name: Ministry of Digital Transformation
+    url: https://mitit.mil.gov.ua
+    method: GET
+    expectStatus: 200
+    followRedirects: true
+    maxResponseTime: 10000  # in milliseconds (10s)
